tests/sawn/fixtures/invalid/09_positive_sign.sawn
// INVALID: Explicit positive sign
value=+42
